// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountCard /> should not render without subscriptions 1`] = `
.emotion-7 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
}

.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 svg {
  margin-right: 8px;
}

.emotion-4 {
  padding: 16px;
  width: 100%;
}

.emotion-0 {
  padding-bottom: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-1 {
  color: #b3b3b3;
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
          title="Project Zero"
        >
          Project: 
          Project Zero
        </h3>
        <div
          className="emotion-1"
        >
          Project ID: 
          00000000-0000-0000-0000-000000000000
        </div>
        <div
          className="emotion-3"
        >
          <a
            className="emotion-2"
            href="/00000000-0000-0000-0000-000000000000"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Go To Project
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountCard /> should render properly 1`] = `
.emotion-14 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
}

.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 svg {
  margin-right: 8px;
}

.emotion-4 {
  padding: 16px;
  width: 100%;
}

.emotion-0 {
  padding-bottom: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-1 {
  color: #b3b3b3;
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-12 {
  padding: 32px;
}

.emotion-6 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

.emotion-7 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-9 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 img {
  margin-right: 12px;
}

.emotion-11 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
          title="Project Zero"
        >
          Project: 
          Project Zero
        </h3>
        <div
          className="emotion-1"
        >
          Project ID: 
          00000000-0000-0000-0000-000000000000
        </div>
        <div
          className="emotion-3"
        >
          <a
            className="emotion-2"
            href="/00000000-0000-0000-0000-000000000000"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Go To Project
          </a>
        </div>
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-6"
      >
        Project Tier: 
        Premier
      </div>
      <h3
        className="emotion-7"
      >
        Usage:
      </h3>
      <div
        className="emotion-9"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours:
           
          0
        </h4>
      </div>
      <div
        className="emotion-11"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Images / Documents: 
          97
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountCard /> should render properly with no modules 1`] = `
.emotion-14 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
}

.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 svg {
  margin-right: 8px;
}

.emotion-4 {
  padding: 16px;
  width: 100%;
}

.emotion-0 {
  padding-bottom: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-1 {
  color: #b3b3b3;
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-12 {
  padding: 32px;
}

.emotion-6 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

.emotion-7 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-9 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 img {
  margin-right: 12px;
}

.emotion-11 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
          title="Project Zero"
        >
          Project: 
          Project Zero
        </h3>
        <div
          className="emotion-1"
        >
          Project ID: 
          00000000-0000-0000-0000-000000000000
        </div>
        <div
          className="emotion-3"
        >
          <a
            className="emotion-2"
            href="/00000000-0000-0000-0000-000000000000"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Go To Project
          </a>
        </div>
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-6"
      >
        Project Tier: 
        Premier
      </div>
      <h3
        className="emotion-7"
      >
        Usage:
      </h3>
      <div
        className="emotion-9"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours:
           
          0
        </h4>
      </div>
      <div
        className="emotion-11"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Images / Documents: 
          97
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountCard /> should render properly with over usage 1`] = `
.emotion-14 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #3b3b3b;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
}

.emotion-5 {
  padding: 16px;
  border-bottom: 1px solid #4a4a4a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 svg {
  margin-right: 8px;
}

.emotion-4 {
  padding: 16px;
  width: 100%;
}

.emotion-0 {
  padding-bottom: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-1 {
  color: #b3b3b3;
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-12 {
  padding: 32px;
}

.emotion-6 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 12px;
}

.emotion-7 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

.emotion-9 {
  padding-bottom: 16px;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 img {
  margin-right: 12px;
}

.emotion-11 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
          title="Project Zero"
        >
          Project: 
          Project Zero
        </h3>
        <div
          className="emotion-1"
        >
          Project ID: 
          00000000-0000-0000-0000-000000000000
        </div>
        <div
          className="emotion-3"
        >
          <a
            className="emotion-2"
            href="/00000000-0000-0000-0000-000000000000"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Go To Project
          </a>
        </div>
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-6"
      >
        Project Tier: 
        Premier
      </div>
      <h3
        className="emotion-7"
      >
        Usage:
      </h3>
      <div
        className="emotion-9"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/videos.png"
            width={32}
          />
           Video Hours:
           
          320
        </h4>
      </div>
      <div
        className="emotion-11"
      >
        <h4
          className="emotion-8"
        >
          <img
            alt=""
            src="/icons/images.png"
            width={32}
          />
           Images / Documents: 
          30,040
        </h4>
      </div>
    </div>
  </div>
</div>
`;
